--- a/alpha-newsletters/emails/alpha-gold.html
+++ b/alpha-newsletters/emails/alpha-gold.html
@@ -31,7 +31,7 @@ altImg: "Alpha Bank Gold Personal Banking"
 
                 <x-spacer height="30px" />
 
-                <x-hero-image width="612px" height="511" name="header.png" alt="{{ page.altImg }}"/>
+                <x-hero-image width="612px" height="511px" name="header.png" alt="{{ page.altImg }}"/>
 
                 <x-divider />
             </tr>
