--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -1,11 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:v="urn:schemas-microsoft-com:vml">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Layout</title>
+  <meta charset="utf-8">
+  <meta name="x-apple-disable-message-reformatting">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="format-detection" content="telephone=no, date=no, address=no, email=no, url=no">
+  <meta name="color-scheme" content="light dark">
+  <meta name="supported-color-schemes" content="light dark">
+  <!--[if mso]>
+  <noscript>
+    <xml>
+      <o:OfficeDocumentSettings xmlns:o="urn:schemas-microsoft-com:office:office">
+        <o:PixelsPerInch>96</o:PixelsPerInch>
+      </o:OfficeDocumentSettings>
+    </xml>
+  </noscript>
+  <style>
+    td,th,div,p,a,h1,h2,h3,h4,h5,h6 {font-family: "Segoe UI", sans-serif; mso-line-height-rule: exactly;}
+  </style>
+  <![endif]-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" media="screen">
+  <style>
+    @media (max-width: 650px) {
+      .sm-px-6 {
+        padding-left: 24px !important;
+        padding-right: 24px !important
+      }
+    }
+  </style>
 </head>
-<body>
-  <h1 style="padding: 12px 24px; color: #FFFF00">hello world</h1>
+<body style="background-color: #e6e6e6; margin: 0; width: 100%; padding: 0; -webkit-font-smoothing: antialiased; word-break: break-word">
+  <div role="article" aria-roledescription="email" aria-label lang="en">
+    <div style="font-family: Arial, sans-serif">
+      <table align="center" style="margin: 0 auto" cellpadding="0" cellspacing="0" role="none">
+        <tr>
+          <td style="width: 650px; max-width: 100%">
+            <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+              <tr>
+                <td style="background-color: #fffffe; padding: 12px 16px">
+                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                    <tr>
+                      <td style="width: 172px">
+                        <a href="https://www.alpha.gr/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target>
+                          <img src="images/alpha_logo.png" width="172" alt="Alpha Bank" style="max-width: 100%; vertical-align: middle">
+                        </a>
+                      </td>
+                      <td style="width: auto"></td>
+                      <td style="width: 93px">
+                        <a href="https://www.alpha.gr/el/gold/gold-personal-banking/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
+                          <img src="images/gold-logo-personal-transparent.png" width="93" alt="Alpha Bank" style="max-width: 100%; vertical-align: middle">
+                        </a>
+                      </td>
+                    </tr>
+                  </table>
+                  <div role="separator" style="line-height: 30px">&zwj;</div>
+                  <img src="images/header.png" width="612" style="max-width: 100%; vertical-align: middle; width: 612px; max-height: 511px" alt="Alpha Bank Gold Personal Banking">
+                  <div role="separator" style="height: 1px; line-height: 1px; background-color: #cbd5e1; margin-top: 24px; margin-bottom: 24px">&zwj;</div>
+                </td>
+              </tr>
+            </table>
+            <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+              <tr>
+                <td class="sm-px-6" style="padding: 24px 36px">
+                  <p style="margin: 0; font-size: 12px; color: #64748b">
+                    &copy; 2025 Maizzle. All rights reserved.
+                  </p>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
 </body>
 </html>
