--- a/alpha-newsletters/emails/alpha-gold.html
+++ b/alpha-newsletters/emails/alpha-gold.html
@@ -16,7 +16,7 @@ altImg: "Alpha Bank Gold Personal Banking"
                 <table class="w-full">
                   <tr>
                     <td class="w-[172px]">
-                      <a href="https://www.alpha.gr/?utm_source=newsletter&utm_medium=CVDM&utm_campaign={{ page.utm }}" target="">
+                      <a href="https://www.alpha.gr/?utm_source=newsletter&utm_medium=CVDM&utm_campaign={{ page.utm }}" target="_blank">
                         <img src="alpha_logo.png" src-production="images/alpha_logo.png" width="172" alt="Alpha Bank">
                       </a>
                     </td>
