--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -43,7 +43,7 @@
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td style="width: 172px">
-                        <a href="https://www.alpha.gr/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target>
+                        <a href="https://www.alpha.gr/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
                           <img src="images/alpha_logo.png" width="172" alt="Alpha Bank" style="max-width: 100%; vertical-align: middle">
                         </a>
                       </td>
@@ -55,8 +55,7 @@
                       </td>
                     </tr>
                   </table>
-                  <div role="separator" style="line-height: 30px">&zwj;</div>
-                  <img src="images/header.png" width="612" style="max-width: 100%; vertical-align: middle; width: 612px; max-height: 511px" alt="Alpha Bank Gold Personal Banking">
+                  <div role="separator" style="line-height: 30px">&zwj;</div><img src="images/header.png" width="612" style="max-width: 100%; vertical-align: middle; width: 612px; max-height: 511px" alt="Alpha Bank Gold Personal Banking">
                   <div role="separator" style="height: 1px; line-height: 1px; background-color: #cbd5e1; margin-top: 24px; margin-bottom: 24px">&zwj;</div>
                 </td>
               </tr>
