--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -24,6 +24,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" media="screen">
   <style>
     @media (max-width: 650px) {
+      .sm-float-none {
+        float: none !important
+      }
+      .sm-table {
+        display: table !important
+      }
+      .sm-w-full {
+        width: 100% !important
+      }
       .sm-px-6 {
         padding-left: 24px !important;
         padding-right: 24px !important
@@ -42,20 +51,29 @@
                 <td style="background-color: #fffffe; padding: 12px 16px">
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
-                      <td style="width: 172px">
-                        <a href="https://www.alpha.gr/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
-                          <img src="images/alpha_logo.png" width="172" alt="Alpha Bank" style="max-width: 100%; vertical-align: middle">
-                        </a>
-                      </td>
-                      <td style="width: auto"></td>
-                      <td style="width: 93px">
-                        <a href="https://www.alpha.gr/el/gold/gold-personal-banking/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
-                          <img src="images/gold-logo-personal-transparent.png" width="93" alt="Alpha Bank" style="max-width: 100%; vertical-align: middle">
-                        </a>
+                      <td>
+                        <table class="sm-table" style="display: none; width: 100%" cellpadding="0" cellspacing="0" role="none">
+                          <tr>
+                            <td>
+                              <div role="separator" style="line-height: 20px">&zwj;</div>
+                            </td>
+                          </tr>
+                        </table>
+                        <table align="right" width="146" class="sm-w-full sm-float-none" style="float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                          <tbody>
+                            <tr>
+                              <td align="center">
+                                <a href="https://www.alpha.gr/el/idiotes/bonus?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
+                                  <img src="images/bonus-logo.png" width="146" alt="Alpha Bank Bonus" style="max-width: 100%; vertical-align: middle">
+                                </a>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
                       </td>
                     </tr>
                   </table>
-                  <div role="separator" style="line-height: 30px">&zwj;</div><img src="images/header.png" width="612" style="max-width: 100%; vertical-align: middle; width: 612px; max-height: 511px" alt="Alpha Bank Gold Personal Banking">
+                  <div role="separator" style="line-height: 30px">&zwj;</div><img src="images/header.png" width="612" style="max-width: 100%; vertical-align: middle; width: 612px; max-height: 511px; margin-left: auto; margin-right: auto; display: block" alt="Alpha Bank Gold Personal Banking">
                   <div role="separator" style="height: 1px; line-height: 1px; background-color: #cbd5e1; margin-top: 24px; margin-bottom: 24px">&zwj;</div>
                 </td>
               </tr>
