divider set color and space

--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -30,6 +30,9 @@
       .sm-table {
         display: table !important
       }
+      .sm-hidden {
+        display: none !important
+      }
       .sm-w-full {
         width: 100% !important
       }
@@ -52,6 +55,16 @@
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td>
+                        <table align="left" width="172" class="sm-w-full sm-float-none" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                          <tr>
+                            <td align="center">
+                              <div role="separator" style="line-height: 10px" class="sm-hidden">&zwj;</div>
+                              <a href="https://www.alpha.gr/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
+                                <img src="images/alpha_logo.png" width="172" alt="Alpha Bank" style="max-width: 100%; vertical-align: middle">
+                              </a>
+                            </td>
+                          </tr>
+                        </table>
                         <table class="sm-table" style="display: none; width: 100%" cellpadding="0" cellspacing="0" role="none">
                           <tr>
                             <td>
@@ -59,12 +72,12 @@
                             </td>
                           </tr>
                         </table>
-                        <table align="right" width="146" class="sm-w-full sm-float-none" style="float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                        <table align="right" width="93" class="sm-w-full sm-float-none" style="float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
                           <tbody>
                             <tr>
                               <td align="center">
-                                <a href="https://www.alpha.gr/el/idiotes/bonus?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
-                                  <img src="images/bonus-logo.png" width="146" alt="Alpha Bank Bonus" style="max-width: 100%; vertical-align: middle">
+                                <a href="https://www.alpha.gr/el/gold/gold-personal-banking/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
+                                  <img src="images/gold-logo-personal-transparent.png" width="93" alt="Alpha Bank" style="max-width: 100%; vertical-align: middle">
                                 </a>
                               </td>
                             </tr>
