--- a/alpha-newsletters/emails/alpha-gold.html
+++ b/alpha-newsletters/emails/alpha-gold.html
@@ -21,7 +21,7 @@ altImg: "Alpha Bank Gold Personal Banking"
 
                 <x-hero-image width="612px" height="511px" name="header.png" alt="{{ page.altImg }}"/>
 
-                <x-divider />
+                <x-divider space-y="50px" color="#EBEBEB"  />
             </tr>
           </table>
 
