--- a/alpha-newsletters/emails/transactional.html
+++ b/alpha-newsletters/emails/transactional.html
@@ -27,7 +27,7 @@ preheader: Transactional email template
                   We're happy to have you on board! Please verify your email address in order to activate your account:
                 </p>
 
-                <x-button
+                <x-button align="center"
                   href="https://maizzle.com"
                   class="bg-slate-950 hover:bg-slate-800"
                 >
