--- a/alpha-newsletters/build_production/transactional.html
+++ b/alpha-newsletters/build_production/transactional.html
@@ -66,13 +66,24 @@
                   <p style="margin: 0 0 24px; font-size: 16px; line-height: 24px; color: #475569">
                     We're happy to have you on board! Please verify your email address in order to activate your account:
                   </p>
-                  <div>
-                    <a href="https://maizzle.com" style="display: inline-block; text-decoration: none; padding: 16px 24px; font-size: 16px; line-height: 1; border-radius: 4px; color: #fffffe; background-color: #020617" class="hover-bg-slate-800">
-                      <!--[if mso]><i style="mso-font-width: 150%; mso-text-raise: 31px" hidden>&emsp;</i><![endif]-->
-                      <span style="mso-text-raise: 16px">Verify email</span>
-                      <!--[if mso]><i hidden style="mso-font-width: 150%">&emsp;&#8203;</i><![endif]-->
-                    </a>
-                  </div>
+                  <table width="100%" cellpadding="0" cellspacing="0" role="none" class="hover-bg-slate-800" style="background-color: #020617">
+                    <tr>
+                      <td align="center"> <!--[if mso]>    <v:rect style="height:48px;width:0;" fill="f" stroke="f" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" />    <v:roundrect style="width:{{{btnWidth}}};height:55px;position:relative;" arcsize="50%" stroke="f" fill="true" xmlns:v=&quot;urn:schemas-microsoft-com:vml&quot; xmlns:w=&quot;urn:schemas-microsoft-com:office:word&quot;>
+        <v:fill type="gradientradial" color="transparent" color2="{{{bgColor}}}" focus="0" focusposition=".05,0.23" focussize=".9,0.25" />
+    </v:roundrect>    <v:roundrect href="https://maizzle.com" style="width:{{{btnWidth}}};height:48px;position:relative;v-text-anchor:middle;" arcsize="50%" stroke="f" fillcolor="{{{bgColor}}}" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word">
+        <w:anchorlock/>
+        <v:textbox inset="0,0,0,0">
+        <center>
+    <![endif]-->
+                        <a href="https://maizzle.com" style="font-family: Arial, sans-serif;font-size: 16px;padding: 0 36px;color: #ffffff;margin: 0 auto;line-height: 48px;background-color:{{bgColor}};border-radius: 5000px;display: inline-block;text-align: center;text-decoration: none;white-space: nowrap;-webkit-text-size-adjust: none">{{{btnText}}}</a>
+                        <!--[if mso]>
+  </center>
+  </v:textbox>
+  </v:roundrect>
+  <![endif]-->
+                      </td>
+                    </tr>
+                  </table>
                   <div role="separator" style="line-height: 24px">&zwj;</div>
                   <p style="margin: 0; font-size: 16px; line-height: 24px; color: #475569">
                     Thanks,
