--- a/alpha-newsletters/emails/alpha-gold.html
+++ b/alpha-newsletters/emails/alpha-gold.html
@@ -20,11 +20,11 @@ altImg: "Alpha Bank Gold Personal Banking"
 
                 <x-spacer height="30px" />
 
-                <x-hero-image width="612px" height="511px" name="header.png" alt="{{ page.altImg }}"/>
+                <x-hero-image width="612px" height="511px" image="header.png" alt="{{ page.altImg }}"/>
 
                 <x-spacer height="30px" />
 
-                <x-button btnWidth="197px" btnText="Ανακαλύψτε την" bgColor="{{page.primaryColor}}" color="{{page.wrapperBg}}" align="center" href="https://maizzle.com" class="rounded-[24px]"/>
+                <x-button btnWidth="208px" btnHeight="52px" align="center" href="https://maizzle.com" image="btn.png" utm="true" alt="{{ page.altImg }}" />
 
                 <x-divider space-y="50px" color="{{page.dividerColor}}"  />
             </tr>
