--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -88,21 +88,11 @@
                   </table>
                   <div role="separator" style="line-height: 30px">&zwj;</div><img src="images/header.png" width="612" style="max-width: 100%; vertical-align: middle; width: 612px; max-height: 511px; margin-left: auto; margin-right: auto; display: block" alt="Alpha Bank Gold Personal Banking">
                   <div role="separator" style="line-height: 30px">&zwj;</div>
-                  <table width="100%" cellpadding="0" cellspacing="0" role="none" style="border-radius: 24px">
+                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
-                      <td align="center"> <!--[if mso]>    <v:rect style="height:48px;width:0;" fill="f" stroke="f" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" />    <v:roundrect style="width:197px;height:55px;position:relative;" arcsize="50%" stroke="f" fill="true" xmlns:v=&quot;urn:schemas-microsoft-com:vml&quot; xmlns:w=&quot;urn:schemas-microsoft-com:office:word&quot;>
-        <v:fill type="gradientradial" color="transparent" color2="#11366B" focus="0" focusposition=".05,0.23" focussize=".9,0.25" />
-    </v:roundrect>    <v:roundrect href="https://maizzle.com" style="width:197px;height:48px;position:relative;v-text-anchor:middle;" arcsize="50%" stroke="f" fillcolor="#11366B" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word">
-        <w:anchorlock/>
-        <v:textbox inset="0,0,0,0">
-        <center>
-    <![endif]-->
-                        <a href="https://maizzle.com" style="font-family: Arial, sans-serif;font-size: 16px;padding: 0 36px;color: #ffffff;margin: 0 auto;line-height: 48px;background-color:#11366B;border-radius: 5000px;display: inline-block;text-align: center;text-decoration: none;white-space: nowrap;-webkit-text-size-adjust: none">Ανακαλύψτε την</a>
-                        <!--[if mso]>
-  </center>
-  </v:textbox>
-  </v:roundrect>
-  <![endif]-->
+                      <td align="center"> <a href="https://maizzle.com" target="_blank">
+                          <img src="images/btn.png" width="208px" height="auto" max-width="100%" border="none" max-height="52px" style="max-width: 100%; vertical-align: middle; margin-left: auto; margin-right: auto; display: block" alt="Alpha Bank Gold Personal Banking">
+                        </a>
                       </td>
                     </tr>
                   </table>
