--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -90,7 +90,7 @@
                   <div role="separator" style="line-height: 30px">&zwj;</div>
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
-                      <td align="center"> <a href="https://maizzle.com" target="_blank">
+                      <td align="center"> <a href="https://maizzle.com" target="_blank" style="display: inline-block">
                           <img src="images/btn.png" width="208px" height="auto" max-width="100%" border="none" max-height="52px" style="max-width: 100%; vertical-align: middle; margin-left: auto; margin-right: auto; display: block" alt="Alpha Bank Gold Personal Banking">
                         </a>
                       </td>
