button utm fixes

--- a/alpha-newsletters/emails/alpha-gold.html
+++ b/alpha-newsletters/emails/alpha-gold.html
@@ -24,7 +24,7 @@ altImg: "Alpha Bank Gold Personal Banking"
 
                 <x-spacer height="30px" />
 
-                <x-button btnWidth="208px" btnHeight="52px" align="center" href="https://maizzle.com" image="btn.png" utm="true" alt="{{ page.altImg }}" />
+                <x-button btnWidth="208px" btnHeight="52px" align="center" href="https://maizzle.com" image="btn.png" utmActive="true" alt="{{ page.altImg }}" />
 
                 <x-divider space-y="50px" color="{{page.dividerColor}}"  />
             </tr>
