card first commit

--- a/alpha-newsletters/emails/alpha-gold.html
+++ b/alpha-newsletters/emails/alpha-gold.html
@@ -14,7 +14,7 @@ altImg: "Alpha Bank Gold Personal Banking"
         <td class="w-[650px] max-w-full">
           <table class="w-full">
             <tr>
-              <td bgcolor={{page.wrapperBg}} class="py-3 px-4 bg-alphaWhite">
+              <td bgcolor={{page.wrapperBg}} class="py-3 px-[19px] bg-alphaWhite">
                 <!-- For headerSecondLogo use 'none', 'gold', or 'bonus'-->
                 <x-header headerSecondLogo="gold" />
 
@@ -27,6 +27,47 @@ altImg: "Alpha Bank Gold Personal Banking"
                 <x-button btnWidth="208px" btnHeight="52px" align="center" href="https://maizzle.com" image="btn.png" utmActive="true" alt="{{ page.altImg }}" />
 
                 <x-divider space-y="50px" color="{{page.dividerColor}}"  />
+
+                <table align="center" width="100%" class="w-full bg-[#DAE2F9]">
+                  <tr>
+                    <td width="24px" class="w-6 h-6" align="left"><img src="corner-top-left.png" width="24" height="24" class="block"></td>
+                    <td>&nbsp;</td>
+                    <td width="24px" class="w-6 h-6" align="right"><img src="corner-top-right.png" width="24" height="24" class="block"></td>
+                  </tr>
+                </table>
+                <table class="w-full bg-[#DAE2F9]">
+                  <tr>
+                    <td class="px-6">
+                      <img
+                        class="rounded-t"
+                        src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&h=300&q=80"
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="p-6 bg-[#DAE2F9] rounded-b">
+                      <span class="text-xs text-slate-500">April 7, 2020</span>
+                      <h2 class="m-0 mt-2 mb-3 text-2xl leading-full">
+                        <a href="https://example.com" class="text-black hover:text-slate-700 no-underline">
+                          Lorem ipsum dolor sit amet, consectetur
+                        </a>
+                      </h2>
+                      <p class="m-0 mb-16 text-base text-slate-500">
+                        Anim ullamco anim ipsum Lorem id voluptate consequat excepteur proident cillum mollit.
+                      </p>
+                      <a href="https://example.com" class="text-blue-500 no-underline hover:underline">
+                        Learn more &rarr;
+                      </a>
+                    </td>
+                  </tr>
+                </table>
+                <table align="center" width="100%" class="w-full bg-[#DAE2F9]">
+                  <tr>
+                    <td width="24px" class="w-6 h-6" align="left"><img src="corner-bottom-left.png" width="24" height="24" class="block"></td>
+                    <td>&nbsp;</td>
+                    <td width="24px" class="w-6 h-6" align="right"><img src="corner-bottom-right.png" width="24" height="24" class="block"></td>
+                  </tr>
+                </table>
             </tr>
           </table>
 
