--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -23,6 +23,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" media="screen">
   <style>
+    .hover-text-slate-700:hover {
+      color: #334155 !important
+    }
+    .hover-underline:hover {
+      text-decoration: underline !important
+    }
     @media (max-width: 650px) {
       .sm-float-none {
         float: none !important
@@ -51,7 +57,7 @@
           <td style="width: 650px; max-width: 100%">
             <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
               <tr>
-                <td bgcolor="#ffffff" style="background-color: #FFFFFF; padding: 12px 16px">
+                <td bgcolor="#ffffff" style="background-color: #FFFFFF; padding: 12px 19px">
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td>
@@ -90,13 +96,50 @@
                   <div role="separator" style="line-height: 30px">&zwj;</div>
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
-                      <td align="center"> <a href="https://maizzle.com" target="_blank" style="display: inline-block">
-                          <img src="images/btn.png" width="208px" height="auto" max-width="100%" border="none" max-height="52px" style="max-width: 100%; vertical-align: middle; margin-left: auto; margin-right: auto; display: block" alt="Alpha Bank Gold Personal Banking">
+                      <td align="center"> <a href="https://maizzle.com?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank" style="display: inline-block">
+                          <img src="images/btn.png" width="208px" height="auto" max-width="100%" border="none" max-height="52px" style="max-width: 100%; vertical-align: middle; display: block" alt="Alpha Bank Gold Personal Banking">
                         </a>
                       </td>
                     </tr>
                   </table>
                   <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 50px 0">&zwj;</div>
+                  <table align="center" width="100%" style="width: 100%; background-color: #DAE2F9" cellpadding="0" cellspacing="0" role="none">
+                    <tr>
+                      <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-top-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                      <td>&nbsp;</td>
+                      <td width="24px" align="right" style="height: 24px; width: 24px"><img src="corner-top-right.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                    </tr>
+                  </table>
+                  <table style="width: 100%; background-color: #DAE2F9" cellpadding="0" cellspacing="0" role="none">
+                    <tr>
+                      <td style="padding-left: 24px; padding-right: 24px">
+                        <img src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&h=300&q=80" style="max-width: 100%; vertical-align: middle; border-top-left-radius: 4px; border-top-right-radius: 4px" alt>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td style="border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; background-color: #DAE2F9; padding: 24px">
+                        <span style="font-size: 12px; color: #64748b">April 7, 2020</span>
+                        <h2 style="margin: 8px 0 12px; font-size: 24px; line-height: 100%">
+                          <a href="https://example.com" class="hover-text-slate-700" style="color: #000001; text-decoration: none">
+                            Lorem ipsum dolor sit amet, consectetur
+                          </a>
+                        </h2>
+                        <p style="margin: 0 0 64px; font-size: 16px; color: #64748b">
+                          Anim ullamco anim ipsum Lorem id voluptate consequat excepteur proident cillum mollit.
+                        </p>
+                        <a href="https://example.com" class="hover-underline" style="color: #3b82f6; text-decoration: none">
+                          Learn more &rarr;
+                        </a>
+                      </td>
+                    </tr>
+                  </table>
+                  <table align="center" width="100%" style="width: 100%; background-color: #DAE2F9" cellpadding="0" cellspacing="0" role="none">
+                    <tr>
+                      <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-bottom-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                      <td>&nbsp;</td>
+                      <td width="24px" align="right" style="height: 24px; width: 24px"><img src="corner-bottom-right.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                    </tr>
+                  </table>
                 </td>
               </tr>
             </table>
