--- a/alpha-newsletters/build_production/transactional.html
+++ b/alpha-newsletters/build_production/transactional.html
@@ -68,7 +68,9 @@
                   </p>
                   <table class="hover-bg-slate-800" style="width: 100%; background-color: #020617" cellpadding="0" cellspacing="0" role="none">
                     <tr>
-                      <td align="center">
+                      <td align="center"> <a href="https://maizzle.com" target="_blank" style="display: inline-block">
+                          <img src="images/{{ image }}" width="{{ btnWidth }}" height="auto" max-width="100%" border="none" max-height="{{ btnHeight }}" style="max-width: 100%; vertical-align: middle; margin-left: auto; margin-right: auto; display: block" alt>
+                        </a>
                       </td>
                     </tr>
                   </table>
