rounded corners component

--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -42,10 +42,6 @@
       .sm-w-full {
         width: 100% !important
       }
-      .sm-px-6 {
-        padding-left: 24px !important;
-        padding-right: 24px !important
-      }
     }
   </style>
 </head>
@@ -103,7 +99,7 @@
                     </tr>
                   </table>
                   <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 50px 0">&zwj;</div>
-                  <table align="center" width="100%" style="width: 100%; background-color: #DAE2F9" cellpadding="0" cellspacing="0" role="none">
+                  <table align="center" width="100%" style="background-color: #DAE2F9; width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-top-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
                       <td>&nbsp;</td>
@@ -113,11 +109,11 @@
                   <table style="width: 100%; background-color: #DAE2F9" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td style="padding-left: 24px; padding-right: 24px">
-                        <img src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&h=300&q=80" style="max-width: 100%; vertical-align: middle; border-top-left-radius: 4px; border-top-right-radius: 4px" alt>
+                        <img src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&h=300&q=80" style="max-width: 100%; vertical-align: middle" alt>
                       </td>
                     </tr>
                     <tr>
-                      <td style="border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; background-color: #DAE2F9; padding: 24px">
+                      <td style="background-color: #DAE2F9; padding: 24px">
                         <span style="font-size: 12px; color: #64748b">April 7, 2020</span>
                         <h2 style="margin: 8px 0 12px; font-size: 24px; line-height: 100%">
                           <a href="https://example.com" class="hover-text-slate-700" style="color: #000001; text-decoration: none">
@@ -133,22 +129,13 @@
                       </td>
                     </tr>
                   </table>
-                  <table align="center" width="100%" style="width: 100%; background-color: #DAE2F9" cellpadding="0" cellspacing="0" role="none">
+                  <table align="center" width="100%" style="background-color: #DAE2F9; width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-bottom-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
                       <td>&nbsp;</td>
                       <td width="24px" align="right" style="height: 24px; width: 24px"><img src="corner-bottom-right.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
                     </tr>
                   </table>
-                </td>
-              </tr>
-            </table>
-            <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
-              <tr>
-                <td class="sm-px-6" style="padding: 24px 36px">
-                  <p style="margin: 0; font-size: 12px; color: #64748b">
-                    &copy; 2025 Maizzle. All rights reserved.
-                  </p>
                 </td>
               </tr>
             </table>
