--- a/alpha-newsletters/emails/alpha-gold.html
+++ b/alpha-newsletters/emails/alpha-gold.html
@@ -32,7 +32,15 @@ altImg: "Alpha Bank Gold Personal Banking"
 
                 <table class="w-full bg-[#DAE2F9]">
                   <tr>
-                    <td class="px-6 bg-[#DAE2F9]">
+                    <td class="px-6">
+                      <img
+                        class=""
+                        src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&h=300&q=80"
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="p-6 bg-[#DAE2F9]">
                       <span class="text-xs text-slate-500">April 7, 2020</span>
                       <h2 class="m-0 mt-2 mb-3 text-2xl leading-full">
                         <a href="https://example.com" class="text-black hover:text-slate-700 no-underline">
