two cols images

--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -33,6 +33,9 @@
       .sm-float-none {
         float: none !important
       }
+      .sm-mb-4 {
+        margin-bottom: 16px !important
+      }
       .sm-table {
         display: table !important
       }
@@ -60,9 +63,8 @@
                         <table align="left" width="172" class="sm-w-full sm-float-none" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
                           <tr>
                             <td align="center">
-                              <div role="separator" style="line-height: 10px" class="sm-hidden">&zwj;</div>
-                              <a href="https://www.alpha.gr/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
-                                <img src="images/alpha_logo.png" width="172" alt="Alpha Bank" style="max-width: 100%; vertical-align: middle">
+                              <div role="separator" style="line-height: 10px" class="sm-hidden">&zwj;</div> <a href="https://www.alpha.gr/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
+                                <img src="images/alpha_logo.png" width="172" alt="Alpha Bank" style="vertical-align: middle; width: 172px; max-width: 100%; max-height: 32px">
                               </a>
                             </td>
                           </tr>
@@ -79,7 +81,7 @@
                             <tr>
                               <td align="center">
                                 <a href="https://www.alpha.gr/el/gold/gold-personal-banking/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
-                                  <img src="images/gold-logo-personal-transparent.png" width="93" alt="Alpha Bank" style="max-width: 100%; vertical-align: middle">
+                                  <img src="images/gold-logo-personal-transparent.png" width="93" alt="Alpha Bank" style="vertical-align: middle; width: 93px; max-width: 100%; max-height: 53px">
                                 </a>
                               </td>
                             </tr>
@@ -88,7 +90,7 @@
                       </td>
                     </tr>
                   </table>
-                  <div role="separator" style="line-height: 30px">&zwj;</div><img src="images/header.png" width="612" style="max-width: 100%; vertical-align: middle; width: 612px; max-height: 511px; margin-left: auto; margin-right: auto; display: block" alt="Alpha Bank Gold Personal Banking">
+                  <div role="separator" style="line-height: 30px">&zwj;</div><img src="images/header.png" width="612" style="vertical-align: middle; width: 612px; max-height: 511px; max-width: 100%; margin-left: auto; margin-right: auto; display: block" alt="Alpha Bank Gold Personal Banking">
                   <div role="separator" style="line-height: 30px">&zwj;</div>
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
@@ -99,7 +101,66 @@
                     </tr>
                   </table>
                   <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 50px 0">&zwj;</div>
-                  <table align="center" width="100%" style="background-color: #DAE2F9; width: 100%" cellpadding="0" cellspacing="0" role="none">
+                  <table align="center" width="100%" style="width: 100%; background-color: #f0f3fd" cellpadding="0" cellspacing="0" role="none">
+                    <tr>
+                      <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-top-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                      <td>&nbsp;</td>
+                      <td width="24px" align="right" style="height: 24px; width: 24px"><img src="corner-top-right.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                    </tr>
+                  </table>
+                  <table style="width: 100%; background-color: #f0f3fd" cellpadding="0" cellspacing="0" role="none">
+                    <tr>
+                      <td style="padding-left: 24px; padding-right: 24px; padding-bottom: 24px">
+                        <h2 style="color: #11366B; margin-bottom: 0; margin-top: 0; text-align: center; font-size: 24px; line-height: 32px">
+                          Aποκτώ το Alpha Cyber Security
+                        </h2>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td style="padding-left: 24px; padding-right: 24px">
+                        <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                          <tr>
+                            <td>
+                              <table align="left" width="276px" class="sm-mb-4 sm-w-full sm-float-none" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                <tr>
+                                  <td align="center"> <a href="https://apps.apple.com/gr/app/myalpha-mobile/id378674531?l=el?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
+                                      <img src="images/by-mobile.png" width="276" style="vertical-align: middle; width: 276px; max-height: 118px; max-width: 100%; display: block" alt="Alpha Bank Gold Personal Banking">
+                                    </a>
+                                  </td>
+                                </tr>
+                              </table>
+                              <table align="right" width="276px" class="sm-w-full sm-float-none" style="float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                <tbody>
+                                  <tr>
+                                    <td align="center"> <a href="https://secure.alpha.gr/auth/ebanking/id/login?login_challenge=e793f555633042501294a32166291377&amp;lang=el" target="_blank" style="display: block">
+                                        <img src="images/by-pc.png" width="276" style="vertical-align: middle; width: 276px; max-height: 118px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
+                                      </a>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td style="padding-left: 24px; padding-right: 24px; padding-top: 24px">
+                        <p style="color: #11366B; margin: 0; text-align: center; font-size: 16px">
+                          Επιλέξτε στο μενού την ενότητα Νέα Προϊόντα > Ασφάλεια.
+                        </p>
+                      </td>
+                    </tr>
+                  </table>
+                  <table align="center" width="100%" style="width: 100%; background-color: #f0f3fd" cellpadding="0" cellspacing="0" role="none">
+                    <tr>
+                      <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-bottom-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                      <td>&nbsp;</td>
+                      <td width="24px" align="right" style="height: 24px; width: 24px"><img src="corner-bottom-right.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                    </tr>
+                  </table>
+                  <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 50px 0">&zwj;</div>
+                  <table align="center" width="100%" style="width: 100%; background-color: #DAE2F9" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-top-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
                       <td>&nbsp;</td>
@@ -129,7 +190,7 @@
                       </td>
                     </tr>
                   </table>
-                  <table align="center" width="100%" style="background-color: #DAE2F9; width: 100%" cellpadding="0" cellspacing="0" role="none">
+                  <table align="center" width="100%" style="width: 100%; background-color: #DAE2F9" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-bottom-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
                       <td>&nbsp;</td>
